
	* Small fix in typo3/sysext/install/mod/class.tx_install.php: GraphicsMagick executed without any parameters caused a server error (used in the Install Tool for guessing the product version)
	* Fixed bug #00001065: Labels of radio buttons in listview were not shown (Thanks to Sebastian Kurfuerst)

2005-05-19  Karsten Dambekalns <karsten@typo3.org>

	* typo3/sysext/cms/layout/db_layout.php: Fix for bug #1042. Thanks to Sebastian Kurfuerst and Michael Stucki. Additionally removed some unused variables/globalisations
	* typo3/mod/tools/em/index.php: Applied patch for bug #1043 (ereg calls without escaped curly braces)
	* t3lib/class.t3lib_install.php: Fix for bug #987 (hardcoded MyISAM table type)

2005-05-17  Michael Stucki  <michael@typo3.org>

	* Minor fix in t3lib/config_default.php: pageNotFoundOnCHashError used "false" instead of "0" as the default value

2005-05-16  Michael Stucki  <michael@typo3.org>

	* Fixed wrong display of empty tags in class.tx_cms_layout.php
	* Fixed missing email address label if none specified in class.tslib_content.php
	* Fixed missing replacement of "@" in spamProtectEmailAddresses mode in class.tslib_content.php

2005-05-14  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 3.8.0rc1
	* Fixed a bug in the context-sensitive menu (right-click on 2nd level like "more options..." didn't work). Thanks to Wolfgang Klinger.

2005-05-14  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #0000797: added a new function to class.tslib_content.php (getBorderAttr()) which returns only a border attribute for images if the doctype is not xhtml_strict,  xhtml_11 or xhtml_2 or if the config parameter 'disableImgBorderAttr' is not set. Setting 'disableImgBorderAttr' to '1' will disable border attributes in img tags even if the doctype is not in the list of doctypes above.

2005-05-12  Michael Stucki  <michael@typo3.org>

	* Force TCEform reload if the plugin is changed